Distinguish between fork for testing

--- a/custom_components/tryfi/manifest.json
+++ b/custom_components/tryfi/manifest.json
@@ -10,6 +10,6 @@
     ],
     "dependencies": [],
     "iot_class": "cloud_polling",
-    "codeowners": ["@sbabcock23"]
+    "codeowners": ["@sbabcock23", "@ws"]
   }
   
